--- a/style.css
+++ b/style.css
@@ -1,24 +1,49 @@
 /* Styling Only Related To ALL Pages */
 
+html{
+  width:100%;
+  height:100%;
+  
+}
+
+  
+
+
 body {
   padding-top: 30px;
   margin-left: 0px;
   margin-right: 0px;
+  background-color: rgb(180, 217, 239);
+  font-size: 20px; 
+   width: 100%;
+    max-width: 100vw;
+   height: 100%;
+     min-height: 100%;
+ 
+  
 }
 /* ⬆⬆⬆⬆ Nav Bar Styling 
 ~~~~~ Taken From: 
 https://www.w3schools.com/css/css_navbar_horizontal.asp */
 ul.nav {
   list-style-type: none;
+  position: fixed; 
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background-color: #333333;
+  background-color: cornflowerblue; 
   position: fixed;
   top: 0;
   width: 100%;
   z-index: 999;
+  margin-left: 40px;
+  margin-right: 40px;
+  margin: 2px;
+
 }
+
+
+
 
 ul.nav li {
   float: left;
@@ -30,16 +55,62 @@ ul.nav li a {
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
+  margin-right: 10px; 
+  margin-left: 10px; 
+  margin:10px; 
+  font-size: 20px; 
+  
 }
 
-ul.nav li a:hover:not(.active) {
-  background-color: yellow;
+ul.nav li a:hover:not(.active){
+  color: rgb(219, 219, 219  );
+ 
 }
+ 
+
 
 ul.nav .active {
-  background-color: red;
+  background-color: cornflowerblue; 
+   text-decoration: underline; 
+   text-underline-position: under;
+  
 }
+
+#home {
+   font-weight: bold;
+}
+ul.nav #home:hover:(.active){
+  color: white); }
+
+ul.nav #home:hover:not(.active){
+ 
+ color: rgb(223, 59, 118)}
+
+
 
 h1 {
   width: 100%;
+  text-align: center; 
+  font-size: 40px; 
+  color: rgb(2234, 74, 132  );
+  
+}
+.blobimg:hover {
+background-color: rgb(252, 176, 207)
+  
+}
+.nav {
+  position: sticky;
+  top: 0;}
+
+.title{
+  color: rgb(220, 65, 121);
+  font-size: 50px; 
+  font-family: "Boldonse", system-ui;
+  font-weight: 400;
+  font-style: normal;
+  padding-top: 100px; 
+  float: left; 
+  margin-left:300px; 
+  
 }
